# CaroloCar

./: README.md  build.sh
calibration/: 1920x1080.yaml  640x480.yaml  CMakeLists.txt  calibration.cpp  camera_old.yaml  opencv_listcreator
calibration/img/: imagelist.yaml  pic_list.xml
calibration/img/1024x768/: 1024x768.yaml  1024x768_2.yaml  imglist.yaml  opencv_calib
calibration/img/1920x1080_labor/: takePicture.sh
misc/: dev_list_1.txt  opmode0.sh  opmode2.sh  record.sh  record2.sh
src/: CMakeLists.txt
src/Main/: CMakeLists.txt  cmake_install.cmake
src/Main/src/: main.cpp  opencvtest edge - trans.cpp  opencvtest trans - edge.cpp  opencvtest.cpp
src/Serial/: CMakeLists.txt
src/Serial/incl/: Serial.h
src/Serial/src/: Serial.cpp
src/ViewTransformer/: CMakeLists.txt  ViewTransformer.vcxproj  ViewTransformer.vcxproj.filters  cmake_install.cmake
src/ViewTransformer/Debug/: ViewTransformer.lib
src/ViewTransformer/ViewTransformer.dir/Debug/ViewTransformer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  ViewTransformer.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
src/ViewTransformer/incl/: ViewTransformer.h
src/ViewTransformer/src/: ViewTransformer.cpp
